Updates to tutorial

--- a/OTA_Channel_Impulse_Response_Tutorial.ipynb
+++ b/OTA_Channel_Impulse_Response_Tutorial.ipynb
@@ -412,37 +412,119 @@
       "source": [
         "# 2. Use Shout to Transmit and Receive Between Two Nodes\n",
         "\n",
-        "🛑 You are now going to run an experiment on POWDER using Shout\n",
-        "1. Again, reference the table on the [IH4: OTA Channel Impulse Response Measurement Canvas assignment](https://utah.instructure.com/courses/1045795/pages/ih4-ota-channel-impulse-response-measurement) for what nodes and frequency range to use based on your group number. You will be using the experiment you instantiated earlier for the remaining steps.\n",
-        "2. Open a terminal window on your host machine. Run the following command to copy your IQ file to your POWDER nodes. Make sure you have the terminal open in the same directory that you downloaded the IQ file to. Change `<IQ_FILENAME.iq>` to be your IQ file name. Change `<USERNAME>@<HOSTNAME>` to be the `username@hostname` (written after `ssh`) listed for each node in the SSH command column in List View of your experiment. Run this command 3 times: for the orchestrator and both clients so that all three have the IQ file.\n",
-        "  * `scp <IQ_FILENAME.iq> <USERNAME>@<HOSTNAME>:/local/repository/shout/signal_library`\n",
-        "3. Open 4 new terminal windows. Run the following two commands in two of the terminals to open two orchestrator sessions. Fill in `<USERNAME>@<HOSTNAME>` for the orchestrator node.\n",
-        "  * `ssh -Y -p 22 -t <USERNAME>@<HOSTNAME> 'cd /local/repository/bin && tmux new-session -A -s orch1 &&  exec $SHELL'`\n",
-        "  * `ssh -Y -p 22 -t <USERNAME>@<HOSTNAME> 'cd /local/repository/bin && tmux new-session -A -s orch2 &&  exec $SHELL'`\n",
-        "4. Run the following commands on each of the remaining two terminals to connect to the two client nodes. Fill in `<USERNAME>@<HOSTNAME>` for the two client nodes, separately.\n",
-        "  * `ssh -Y -p 22 -t <USERNAME>@<HOSTNAME> 'cd /local/repository/bin && tmux new-session -A -s client1 &&  exec $SHELL'`\n",
-        "  * `ssh -Y -p 22 -t <USERNAME>@<HOSTNAME> 'cd /local/repository/bin && tmux new-session -A -s client2 &&  exec $SHELL'`\n",
-        "5. Download the `save_iq_w_tx_file.json` file from the [IH4: OTA Channel Impulse Response Measurement Canvas assignment](https://utah.instructure.com/courses/1045795/pages/ih4-ota-channel-impulse-response-measurement). This file needs to be modified for your experiment. In the terminal window you used on your host machine to copy your IQ file to each node, open the JSON file in your text editor of choice.\n",
-        "  * Change `txfreq` and `rxfreq` to be within your allocated frequency range\n",
-        "  * Change `txsamps` to specify your IQ file name\n",
-        "  * Change `txclients` and `rxclients` to have your designated nodes using the **ID** column in the experiment List View for the two client comp nodes.\n",
-        "  * If you are using B210 radios (groups 4-6 using Dense Deployment nodes), change `txgain` and `rxgain` to be the values specified in the resources table on the [IH4 canvas page](https://utah.instructure.com/courses/1045795/pages/ih4-ota-channel-impulse-response-measurement). These radios have a different gain range than the X310 radios on the rooftop nodes.\n",
-        "  * Copy the `save_iq_w_tx_file.json` file to `/local/repository/etc/cmdfiles` on the orchestrator and both clients using the same `scp` command as used to copy the IQ file to all nodes previously.\n",
-        "6. In one of the orchestrator terminal sessions, run: `./1.start_orch.sh`\n",
-        "7. In both client terminal sessions, run:\n",
+        "You are now going to run an experiment on POWDER using Shout. Again, reference the table on the [IH4: OTA Channel Impulse Response Measurement Canvas assignment](https://utah.instructure.com/courses/1045795/pages/ih4-ota-channel-impulse-response-measurement) for what nodes and frequency range to use based on your group number. You will be using the experiment you instantiated earlier for the remaining steps.\n",
+        "\n",
+        "🛑 Navigate to the POWDER experiment you instantiated at the beginning of the tutorial. At the bottom of the page, there should be a table with a List View option that displays the experiment's node information.\n",
+        "1. In the `SSH command` column of the table, you should see `ssh <USERNAME>@<HOSTNAME>` for the orchestrator and both clients' compute nodes. Click the icon to the right that looks like a clipboard with an arrow to copy the command. Paste these commands in a comma separated string for `commands` below. Make sure to list the orchestrator first. Do not include extra spaces with the commas.\n",
+        "2. Fill in `ids` as a comma separated list by copying the names in the `ID` column for both clients' compute nodes. Make sure these are listed in the same order as in `commands`. Do not include the orchestrator. Do not include extra spaces with the commas.\n",
+        "\n",
+        "🛑 Click play to run the code. Follow the resulting printed instructions."
+      ],
+      "metadata": {
+        "id": "iXHDwfZCElra"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "commands = '' ### TODO ###\n",
+        "command_arr = commands.split(',')\n",
+        "for i in range(len(command_arr)):\n",
+        "    command_arr[i] = command_arr[i].split(' ')[1]\n",
+        "\n",
+        "ids = '' ### TODO ###\n",
+        "ids_arr = ids.split(',')\n",
+        "\n",
+        "# Shout Experiment Instructions\n",
+        "\n",
+        "print(\"1. Open a terminal window on your host machine. Run the following commands to copy your IQ file to your POWDER nodes.\")\n",
+        "print(\"   Make sure you have the terminal open in the same directory that you downloaded the IQ file to.\")\n",
+        "for each in command_arr:\n",
+        "    print(\"scp \" + IQ_filename + \" \" + each + \":/local/repository/shout/signal_library\")\n",
+        "\n",
+        "print(\"\\n2. Open 4 new terminal windows. Run the following commands in two of the terminals to open two orchestrator sessions.\")\n",
+        "print(\"ssh -Y -p 22 -t \" + command_arr[0] + \" \\'cd /local/repository/bin && tmux new-session -A -s orch1 && exec $SHELL\\'\")\n",
+        "print(\"ssh -Y -p 22 -t \" + command_arr[0] + \" \\'cd /local/repository/bin && tmux new-session -A -s orch2 && exec $SHELL\\'\")\n",
+        "\n",
+        "print(\"\\n3. Run the following commands in each of the remaining two terminals to connect to the two client nodes.\")\n",
+        "print(\"ssh -Y -p 22 -t \" + command_arr[1] + \" \\'cd /local/repository/bin && tmux new-session -A -s client1 && exec $SHELL\\'\")\n",
+        "print(\"ssh -Y -p 22 -t \" + command_arr[2] + \" \\'cd /local/repository/bin && tmux new-session -A -s client2 && exec $SHELL\\'\")"
+      ],
+      "metadata": {
+        "id": "8hNBe-lNGHis"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🛑 Download the `save_iq_w_tx_file.json` file from the [IH4: OTA Channel Impulse Response Measurement Canvas assignment](https://utah.instructure.com/courses/1045795/pages/ih4-ota-channel-impulse-response-measurement). This file needs to be modified for your experiment. In the terminal window you used on your host machine to copy your IQ file to each node, open the JSON file in your text editor of choice.\n",
+        "\n",
+        "🛑 Click play to run the code below. Follow the resulting printed instructions."
+      ],
+      "metadata": {
+        "id": "BMHeEdB2vnl0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"1. Change txfreq and rxfreq to be within your allocated frequency range. txfreq and rxfreq should be the same frequency.\")\n",
+        "print(\"\\n2. Change txsamps to specify your IQ file name.\")\n",
+        "print(\"\\n3. Change txclients and rxclients to: \" + str(ids_arr).replace('\\'','\\\"'))\n",
+        "print(\"\\n4. If you are using B210 radios (groups 4-6 using Dense Deployment nodes), change txgain and rxgain to be the values specified in the resources\")\n",
+        "print(\"   table on the IH4 canvas page. These radios have a different gain range than the X310 radios on the rooftop nodes.\")\n",
+        "print(\"\\n5. Save the changes. Run the following commands on your local machine to copy the JSON file to the orchestrator and both clients.\")\n",
+        "for each in command_arr:\n",
+        "    print(\"scp save_iq_w_tx_file.json \" + each + \":/local/repository/etc/cmdfiles\")"
+      ],
+      "metadata": {
+        "id": "32BaA3obMXXN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🛑 Start the Shout data collection:\n",
+        "1. In one of the orchestrator terminal sessions, run: `./1.start_orch.sh`\n",
+        "2. In both client terminal sessions, run:\n",
         "  * `sudo sysctl -w net.core.wmem_max=24862979`\n",
         "  * `./2.start_client.sh`\n",
         "  * Wait for the two clients to say \"Waiting for command...\"\n",
         "  * REMINDER: If you run into the firmware mismatch issue, run these commands sequentially, power-cycle the radio from the POWDER web UI, and restart the experiment steps.\n",
         "    * `sudo uhd_images_downloader -t x3`\n",
         "    * `sudo uhd_image_loader --args=\"type=x300,addr=192.168.40.2\"`\n",
-        "8. In the second orchestrator terminal session, run: `./3.run_cmd.sh`\n",
-        "9. After data collection finishes and the second orchestrator returns to the command prompt, run `cd /local/data`. There should be a Shout data folder. Copy this folder name and run the following command to zip the data folder: `zip -r data.zip <SHOUT_DATA_FOLDER>` where `<SHOUT_DATA_FOLDER>` is the name of the new data folder.\n",
-        "  * Run this command in a terminal window on your local machine to copy the data folder: `scp <USERNAME>@<HOSTNAME>:/local/data/data.zip .` where `<USERNAME>@<HOSTNAME>` is for the orchestrator.\n",
-        "10. Navigate back to the folder icon in the left menu of this notebook. Upload `data.zip` by clicking the first icon (paper with up arrow). Run the code for the next two code cells to unzip the data you just collected and define the necessary cross-correlation functions."
+        "3. In the second orchestrator terminal session, run: `./3.run_cmd.sh`\n",
+        "4. After data collection finishes and the second orchestrator returns to the command prompt, run `cd /local/data`. There should be a Shout data folder. Copy this folder name and run the following command to zip the data folder: `zip -r data.zip <SHOUT_DATA_FOLDER>` where `<SHOUT_DATA_FOLDER>` is the name of the new data folder.\n",
+        "\n",
+        "🛑 Click play to run the code. Follow the resulting printed instructions."
       ],
       "metadata": {
-        "id": "BMHeEdB2vnl0"
+        "id": "kDDW_O-uN6k9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Run the following command in a terminal window on your local host machine to copy the data folder:\")\n",
+        "print(\"scp \" + command_arr[0] + \":/local/data/data.zip .\")"
+      ],
+      "metadata": {
+        "id": "i-WD3eWkOe_q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🛑 Navigate back to the folder icon in the left menu of this notebook. Upload `data.zip` by clicking the first icon (paper with up arrow). Run the code for the next two code cells to unzip the data you just collected and define the necessary cross-correlation functions."
+      ],
+      "metadata": {
+        "id": "ErbfyO7IO53M"
       }
     },
     {
